[project]
name = "langgraph-starter"
version = "0.1.0"
description = "A minimal, production-ready LangGraph starter project"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
]

# Dev dependencies (install with: uv sync --group dev)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",   # required by FastAPI TestClient
]

# No [build-system] — this is an app, not a PyPI library.
# uv runs it directly. Removing hatchling avoids the
# "no package directory found" wheel build error.

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [".venv"]

[tool.pytest.ini_options]
testpaths = ["tests", "graph/nodes", "graph/chains/tests"]
addopts   = "--tb=short -q"
markers   = [
    "unit: fast offline tests, no LLM calls",
    "integration: full graph run, some call the real LLM",
]
